--- a/xazh/package.json
+++ b/xazh/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons": "^0.0.11",
     "element-plus": "^2.3.8",
     "jquery": "^3.7.0",
     "vue": "^3.3.4",
@@ -16,12 +17,19 @@
     "vuex": "^4.1.0"
   },
   "devDependencies": {
+    "@iconify-json/ep": "^1.1.11",
+    "@rollup/plugin-inject": "^5.0.3",
     "@types/jquery": "^3.5.16",
+    "@types/node": "^20.4.2",
     "@vitejs/plugin-vue": "^4.2.3",
+    "sass": "^1.64.0",
+    "sass-loader": "^13.3.2",
     "typescript": "^5.0.2",
     "unplugin-auto-import": "^0.16.6",
+    "unplugin-icons": "^0.16.5",
     "unplugin-vue-components": "^0.25.1",
     "vite": "^4.4.0",
+    "vite-plugin-inspect": "^0.7.33",
     "vue-tsc": "^1.8.3"
   },
   "exports": {
