--- a/xazh/package.json
+++ b/xazh/package.json
@@ -9,24 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@element-plus/icons": "^0.0.11",
-    "element-plus": "^2.3.8",
+    "@ant-design/icons-vue": "^6.1.0",
+    "ant-design-vue": "^4.0.0",
     "jquery": "^3.7.0",
     "vue": "^3.3.4",
     "vue-router": "^4.0.13",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@iconify-json/ep": "^1.1.11",
     "@rollup/plugin-inject": "^5.0.3",
     "@types/jquery": "^3.5.16",
     "@types/node": "^20.4.2",
     "@vitejs/plugin-vue": "^4.2.3",
-    "sass": "^1.64.0",
-    "sass-loader": "^13.3.2",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.3",
     "typescript": "^5.0.2",
     "unplugin-auto-import": "^0.16.6",
-    "unplugin-icons": "^0.16.5",
     "unplugin-vue-components": "^0.25.1",
     "vite": "^4.4.0",
     "vite-plugin-inspect": "^0.7.33",
