--- a/xazh/package.json
+++ b/xazh/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons-vue": "^6.1.0",
     "ant-design-vue": "^4.0.0",
     "jquery": "^3.7.0",
+    "lottie-web": "^5.12.2",
     "vue": "^3.3.4",
     "vue-router": "^4.0.13",
     "vuex": "^4.1.0"
