--- a/xazh/package.json
+++ b/xazh/package.json
@@ -13,6 +13,8 @@
     "ant-design-vue": "^4.0.0",
     "jquery": "^3.7.0",
     "lottie-web": "^5.12.2",
+    "ts-md5": "^1.3.1",
+    "uid": "^2.0.2",
     "vue": "^3.3.4",
     "vue-router": "^4.0.13",
     "vuex": "^4.1.0"
