2023-08-28 Go to school on the 30th, so a few day off.

--- a/xazh-back/package.json
+++ b/xazh-back/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "private": true,
   "dependencies": {
+    "@koa/cors": "^4.0.0",
     "@midwayjs/bootstrap": "^3.0.0",
     "@midwayjs/core": "^3.0.0",
     "@midwayjs/decorator": "^3.0.0",
