--- a/xazh/package.json
+++ b/xazh/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
     "ant-design-vue": "^4.0.0",
+    "axios": "^1.5.0",
     "lottie-web": "^5.12.2",
     "ts-md5": "^1.3.1",
     "uid": "^2.0.2",
