--- a/xazh/package.json
+++ b/xazh/package.json
@@ -15,6 +15,9 @@
     "js-base64": "^3.7.5",
     "js-cookie": "^3.0.5",
     "lottie-web": "^5.12.2",
+    "markdown-it-emoji": "^2.0.2",
+    "markdown-it-toc": "^1.1.0",
+    "mavon-editor": "^3.0.1",
     "ts-md5": "^1.3.1",
     "uid": "^2.0.2",
     "vue": "^3.3.4",
