--- a/xazh/package.json
+++ b/xazh/package.json
@@ -19,6 +19,7 @@
     "ts-md5": "^1.3.1",
     "uid": "^2.0.2",
     "vue": "^3.3.4",
+    "vue-draggable-plus": "^0.3.5",
     "vue-router": "^4.0.13",
     "vuex": "^4.1.0"
   },
