--- a/xazh/package.json
+++ b/xazh/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
+    "@types/node-summary": "^1.2.3",
     "ant-design-vue": "^4.1.1",
     "axios": "^1.5.0",
     "js-base64": "^3.7.5",
