--- a/xazh-back/package.json
+++ b/xazh-back/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "private": true,
   "dependencies": {
-    "@koa/cors": "^4.0.0",
+    "@koa/cors": "^5.0.0",
     "@midwayjs/bootstrap": "^3.0.0",
     "@midwayjs/core": "^3.0.0",
     "@midwayjs/decorator": "^3.0.0",
@@ -12,10 +12,8 @@
     "@midwayjs/koa": "^3.0.0",
     "@midwayjs/logger": "^2.14.0",
     "@midwayjs/validate": "^3.0.0",
-    "js-base64": "^3.7.5",
     "mongoose": "^7.2.0",
-    "nodemailer": "^6.9.4",
-    "ts-md5": "^1.3.1"
+    "nodemailer": "^6.9.4"
   },
   "devDependencies": {
     "@midwayjs/cli": "^2.0.0",
