--- a/xazh/package.json
+++ b/xazh/package.json
@@ -10,10 +10,9 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
-    "@types/node-summary": "^1.2.3",
     "ant-design-vue": "^4.1.1",
     "axios": "^1.5.0",
-    "js-base64": "^3.7.5",
+    "crypto-js": "^4.2.0",
     "js-cookie": "^3.0.5",
     "lottie-web": "^5.12.2",
     "mavon-editor": "^3.0.1",
@@ -26,6 +25,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-inject": "^5.0.3",
+    "@types/crypto-js": "^4.2.2",
     "@types/js-cookie": "^3.0.3",
     "@types/node": "^20.4.2",
     "@vitejs/plugin-vue": "^4.2.3",
