--- a/xazh-back/.vscode/launch.json
+++ b/xazh-back/.vscode/launch.json
@@ -6,6 +6,12 @@
   "configurations": [
     {
       "type": "node",
+      "request": "attach",
+      "name": "Attach to Node.js",
+      "port": 9229
+    },
+    {
+      "type": "node",
       "request": "launch",
       "name": "Debug",
       "skipFiles": [
