--- a/xazh-back/package.json
+++ b/xazh-back/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@midwayjs/cli": "^2.0.0",
+    "@midwayjs/cli-plugin-swc": "^1.3.19",
     "@midwayjs/mock": "^3.0.0",
     "@types/jest": "^29.2.0",
     "@types/koa": "^2.13.4",
@@ -33,7 +34,7 @@
   },
   "scripts": {
     "start": "NODE_ENV=production node ./bootstrap.js",
-    "dev": "cross-env TS_NODE_TYPE_CHECK=false TS_NODE_TRANSPILE_ONLY=true NODE_ENV=local midway-bin dev --ts",
+    "dev": "cross-env TS_NODE_TYPE_CHECK=false TS_NODE_TRANSPILE_ONLY=true NODE_ENV=local midway-bin dev --ts --fast --debug",
     "test": "midway-bin test --ts",
     "cov": "midway-bin cov --ts",
     "lint": "mwts check",
