--- a/xazh-back/package.json
+++ b/xazh-back/package.json
@@ -13,11 +13,11 @@
     "@midwayjs/logger": "^2.14.0",
     "@midwayjs/validate": "^3.0.0",
     "mongoose": "^7.2.0",
+    "mwtsc": "^1.7.2",
     "nodemailer": "^6.9.4"
   },
   "devDependencies": {
     "@midwayjs/cli": "^2.0.0",
-    "@midwayjs/cli-plugin-swc": "^1.3.19",
     "@midwayjs/mock": "^3.0.0",
     "@types/jest": "^29.2.0",
     "@types/koa": "^2.13.4",
@@ -25,7 +25,6 @@
     "@types/nodemailer": "^6.4.9",
     "cross-env": "^6.0.0",
     "jest": "^29.2.2",
-    "mwts": "^1.0.5",
     "ts-jest": "^29.0.3",
     "typescript": "~4.8.0"
   },
