--- a/xazh/package.json
+++ b/xazh/package.json
@@ -18,6 +18,7 @@
     "mavon-editor": "^3.0.1",
     "ts-md5": "^1.3.1",
     "uid": "^2.0.2",
+    "v-lazy-component": "^3.0.9",
     "vue": "^3.3.4",
     "vue-draggable-plus": "^0.3.5",
     "vue-router": "^4.0.13",
